@@ -3,6 +3,7 @@ package com.fiap.itmoura.tech_challenge_restaurant.application.usecases;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,9 +17,9 @@ import com.fiap.itmoura.tech_challenge_restaurant.domain.exceptions.ConflictRequ
 import com.fiap.itmoura.tech_challenge_restaurant.domain.exceptions.NotFoundException;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
+import lombok.extern.slf4j.Slf4j;
 
-@Log4j2
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class KitchenTypeUseCase {
@@ -28,99 +29,146 @@ public class KitchenTypeUseCase {
 
     @Transactional
     public KitchenTypeResponse createKitchenType(KitchenTypeRequest request) {
-        log.info("Creating kitchen type: {}", request.getName());
+        log.info("=== Creating kitchen type ===");
+        log.info("Request received: name='{}', description='{}'", request.getName(), request.getDescription());
 
-        // Verificar se já existe um tipo de cozinha com o mesmo nome
-        if (kitchenTypeRepository.existsByNameIgnoreCase(request.getName())) {
-            throw new ConflictRequestException("Kitchen type with name '" + request.getName() + "' already exists");
+        // Validar entrada
+        if (request.getName() == null || request.getName().trim().isEmpty()) {
+            throw new IllegalArgumentException("Kitchen type name cannot be null or empty");
         }
 
+        String trimmedName = request.getName().trim();
+        String trimmedDescription = request.getDescription() != null ? request.getDescription().trim() : null;
+
+        log.info("After trimming: name='{}', description='{}'", trimmedName, trimmedDescription);
+
+        // Verificar se já existe um tipo de cozinha com o mesmo nome
+        if (kitchenTypeRepository.existsByNameIgnoreCase(trimmedName)) {
+            log.warn("Kitchen type with name '{}' already exists", trimmedName);
+            throw new ConflictRequestException("Kitchen type with name '" + trimmedName + "' already exists");
+        }
+
+        // Criar entidade
+        UUID id = UUID.randomUUID();
+        LocalDateTime now = LocalDateTime.now();
+        
         KitchenTypeDocumentEntity entity = KitchenTypeDocumentEntity.builder()
-            .id(UUID.randomUUID())
-            .name(request.getName().trim())
-            .description(request.getDescription() != null ? request.getDescription().trim() : null)
-            .createdAt(LocalDateTime.now())
-            .lastUpdate(LocalDateTime.now())
+            .id(id)
+            .name(trimmedName)
+            .description(trimmedDescription)
+            .createdAt(now)
+            .lastUpdate(now)
             .build();
 
-        KitchenTypeDocumentEntity savedEntity = kitchenTypeRepository.save(entity);
-        log.info("Kitchen type created successfully with ID: {}", savedEntity.getId());
+        log.info("Entity created: {}", entity);
+        log.info("Entity details - ID: {}, Name: '{}', Description: '{}', CreatedAt: {}, LastUpdate: {}", 
+                entity.getId(), entity.getName(), entity.getDescription(), entity.getCreatedAt(), entity.getLastUpdate());
 
-        return KitchenTypeResponse.fromEntity(savedEntity);
+        // Salvar no banco
+        KitchenTypeDocumentEntity savedEntity = kitchenTypeRepository.save(entity);
+        log.info("Entity saved: {}", savedEntity);
+        log.info("Saved entity details - ID: {}, Name: '{}', Description: '{}', CreatedAt: {}, LastUpdate: {}", 
+                savedEntity.getId(), savedEntity.getName(), savedEntity.getDescription(), 
+                savedEntity.getCreatedAt(), savedEntity.getLastUpdate());
+
+        // Verificar se foi salvo corretamente
+        var foundEntity = kitchenTypeRepository.findById(savedEntity.getId());
+        if (foundEntity.isPresent()) {
+            log.info("Verification: Entity found in database: {}", foundEntity.get());
+        } else {
+            log.error("Verification: Entity NOT found in database after save!");
+        }
+
+        // Converter para response
+        KitchenTypeResponse response = KitchenTypeResponse.fromEntity(savedEntity);
+        log.info("Response created: {}", response);
+
+        return response;
     }
 
     public List<KitchenTypeResponse> getAllKitchenTypes() {
-        log.info("Fetching all kitchen types");
-
+        log.info("=== Getting all kitchen types ===");
+        
         List<KitchenTypeDocumentEntity> entities = kitchenTypeRepository.findAll();
-
-        return entities.stream()
+        log.info("Found {} kitchen types in database", entities.size());
+        
+        for (KitchenTypeDocumentEntity entity : entities) {
+            log.info("Entity from DB: {}", entity);
+        }
+        
+        List<KitchenTypeResponse> responses = entities.stream()
             .map(KitchenTypeResponse::fromEntity)
-            .toList();
+            .collect(Collectors.toList());
+            
+        log.info("Returning {} responses", responses.size());
+        return responses;
     }
 
     public KitchenTypeResponse getKitchenTypeById(UUID id) {
-        log.info("Fetching kitchen type by ID: {}", id);
-
+        log.info("=== Getting kitchen type by ID: {} ===", id);
+        
         KitchenTypeDocumentEntity entity = kitchenTypeRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("Kitchen type not found with ID: " + id));
-
-        return KitchenTypeResponse.fromEntity(entity);
+            .orElseThrow(() -> {
+                log.error("Kitchen type not found with ID: {}", id);
+                return new NotFoundException("Kitchen type not found with id: " + id);
+            });
+            
+        log.info("Found entity: {}", entity);
+        
+        KitchenTypeResponse response = KitchenTypeResponse.fromEntity(entity);
+        log.info("Returning response: {}", response);
+        
+        return response;
     }
 
     @Transactional
     public KitchenTypeResponse updateKitchenType(UUID id, KitchenTypeRequest request) {
-        log.info("Updating kitchen type with ID: {}", id);
+        log.info("=== Updating kitchen type with ID: {} ===", id);
+        log.info("Update request: name='{}', description='{}'", request.getName(), request.getDescription());
 
         KitchenTypeDocumentEntity existingEntity = kitchenTypeRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("Kitchen type not found with ID: " + id));
+            .orElseThrow(() -> new NotFoundException("Kitchen type not found with id: " + id));
 
-        // Verificar se o novo nome já existe (excluindo o próprio registro)
-        if (kitchenTypeRepository.existsByNameIgnoreCaseAndIdNot(request.getName(), id)) {
-            throw new ConflictRequestException("Kitchen type with name '" + request.getName() + "' already exists");
+        log.info("Existing entity: {}", existingEntity);
+
+        String trimmedName = request.getName().trim();
+        String trimmedDescription = request.getDescription() != null ? request.getDescription().trim() : null;
+
+        // Verificar se o nome já existe (exceto para o próprio registro)
+        if (kitchenTypeRepository.existsByNameIgnoreCaseAndIdNot(trimmedName, id)) {
+            throw new ConflictRequestException("Kitchen type with name '" + trimmedName + "' already exists");
         }
 
-        existingEntity.setName(request.getName().trim());
-        existingEntity.setDescription(request.getDescription() != null ? request.getDescription().trim() : null);
+        // Atualizar campos
+        existingEntity.setName(trimmedName);
+        existingEntity.setDescription(trimmedDescription);
         existingEntity.setLastUpdate(LocalDateTime.now());
 
+        log.info("Entity before update: {}", existingEntity);
+
         KitchenTypeDocumentEntity updatedEntity = kitchenTypeRepository.save(existingEntity);
-        log.info("Kitchen type updated successfully with ID: {}", updatedEntity.getId());
+        log.info("Entity after update: {}", updatedEntity);
 
         return KitchenTypeResponse.fromEntity(updatedEntity);
     }
 
     @Transactional
     public void deleteKitchenType(UUID id) {
-        log.info("Deleting kitchen type with ID: {}", id);
+        log.info("=== Deleting kitchen type with ID: {} ===", id);
 
-        if (!kitchenTypeRepository.existsById(id)) {
-            throw new NotFoundException("Kitchen type not found with ID: " + id);
-        }
+        KitchenTypeDocumentEntity entity = kitchenTypeRepository.findById(id)
+            .orElseThrow(() -> new NotFoundException("Kitchen type not found with id: " + id));
 
-        // Verificar se o tipo de cozinha está sendo usado por algum restaurante
-        boolean isUsedByRestaurants = restaurantRepository.findAll().stream()
-            .anyMatch(restaurant -> restaurant.getKitchenType() != null && 
-                     restaurant.getKitchenType().getId().equals(id));
+        log.info("Entity to delete: {}", entity);
 
+        // Verificar se está sendo usado por algum restaurante
+        boolean isUsedByRestaurants = restaurantRepository.existsByKitchenTypeId(id);
         if (isUsedByRestaurants) {
-            throw new ConflictRequestException("Cannot delete kitchen type as it is being used by restaurants");
+            log.warn("Cannot delete kitchen type {} - it is being used by restaurants", id);
+            throw new ConflictRequestException("Cannot delete kitchen type. It is being used by restaurants");
         }
 
         kitchenTypeRepository.deleteById(id);
-        log.info("Kitchen type deleted successfully with ID: {}", id);
-    }
-
-    public KitchenTypeDocumentEntity getKitchenTypeByIdOrName(String idOrName) {
-        log.info("Fetching kitchen type by ID or name: {}", idOrName);
-
-        // Tentar buscar por UUID primeiro
-        try {
-            UUID id = UUID.fromString(idOrName);
-            return kitchenTypeRepository.findById(id).orElse(null);
-        } catch (IllegalArgumentException e) {
-            // Se não for UUID válido, buscar por nome
-            return kitchenTypeRepository.findByNameIgnoreCase(idOrName).orElse(null);
-        }
+        log.info("Kitchen type deleted successfully");
     }
 }
